Replace CharEncoding.UTF_8 with "UTF-8"
Fixes build failure due to CharEncoding not found.